<resources>
    <string name="app_name">BigBrainz</string>
    <string name="btn_cancel">CANCEL</string>

    <!-- Welcome Page -->
    <string name="welcome_header">BigBrainz</string>
    <string name="welcome_subheader">Elevate your Whiz with every Quiz</string>

    <!-- Bottom Navigation Menu -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_home">Home</string>
    <string name="title_quizzes">Quizzes</string>
    <string name="title_profile">Profile</string>

    <!-- Login -->
    <string name="login_header">Login to your account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_to_signup">CREATE AN ACCOUNT</string>

    <!-- Signup -->
    <string name="signup_header">Create an account</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="btn_to_login">I ALREADY HAVE AN ACCOUNT</string>

    <!-- Dashboard -->
    <string name="dashboard_greetings">Ready to test your whiz?</string>
    <string name="dashboard_to_playlist_1">Having a hard time?</string>
    <string name="dashboard_to_playlist_2">TAP HERE</string>
    <string name="dashboard_to_playlist_3">Studying? How bout some</string>
    <string name="dashboard_to_playlist_4">MUSIC</string>
    <string name="dashboard_create_take_quiz">Create/Take a Quiz</string>
    <string name="title_schedule">Your Scheduled Quizzes</string>
    <string name="btn_create_quiz">CREATE QUIZ</string>
    <string name="btn_take_quiz">TAKE QUIZ</string>

    <!-- Webview -->
    <string name="webview">Playlist</string>

    <!-- Profile -->
    <string name="profile_header">Profile</string>
    <string name="profile_username">Username</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">Password</string>
    <string name="btn_edit_profile">EDIT PROFILE</string>
    <string name="btn_logout">LOGOUT</string>

    <!-- Edit Profile -->
    <string name="edit_profile_header">EDIT PROFILE</string>
    <string name="hint_edit_username">Enter New Username</string>
    <string name="hint_edit_email">Enter New Email</string>
    <string name="hint_edit_password">Enter New Password</string>
    <string name="hint_edit_confirm_password">Confirm New Password</string>
    <string name="btn_update">SAVE CHANGES</string>

</resources>